--- a/view/index.html
+++ b/view/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body>
+<body class="body-dark">
 
 
 <div id="docer">
@@ -69,12 +69,12 @@
     <!--modal end-->
     <div class="navbar-fixed-top">
         <div class="title text-center">
-            <div class="logo">
-                <a class="pull-left" href="/">DOCER</a>
+            <div class="logo  pull-left">
+                <a href="/">Docer</a>
             </div>
-            <div>
-                欢迎来到Docer，Docer是一个帮助你快速撰写论文的工具。
-                <a v-on:click="logout()" class="pull-right" style="color:white;">注销</a>
+            <div class="title-txt">
+                <label>欢迎来到Docer，Docer是一个帮助你快速撰写论文的工具。</label>
+                <label class="pull-right"><a v-on:click="logout()" >注销</a></label>
             </div>
         </div>
     </div>
