--- a/view/login.html
+++ b/view/login.html
@@ -20,14 +20,16 @@
 
 </head>
 
-<body>
+<body class="body-dark">
 <div class="navbar-fixed-top">
     <div class="title text-center">
-        <div class="logo">
-            <a class="pull-left" href="/">DOCER</a>
+        <div class="logo pull-left">
+            <a href="/">
+                Docer
+            </a>
         </div>
-        <div>
-            <p>欢迎来到Docer，Docer是一个帮助你快速撰写论文的工具。</p>
+        <div class="title-txt">
+            <label>欢迎来到Docer，Docer是一个帮助你快速撰写论文的工具。</label>
         </div>
     </div>
 </div>
@@ -44,7 +46,7 @@
                     <label class="sr-only" for="inputfile">密码</label>
                     <input type="password" name="pwd" class="form-control" placeholder="密码">
                 </div>
-                <button type="submit" class="btn btn-success btn-sm btn-block">提交</button>
+                <button type="submit" class="btn btn-primary btn-sm btn-block">提交</button>
             </form>
             <p style="margin-top: 10px;" >没有账号？ <a href="#">注册</a></p>
         </div>
