--- a/public/docer.css
+++ b/public/docer.css
@@ -12,7 +12,7 @@
 
 .tool-bar {
     background: #efefef;
-    padding: 5px 15px;
+    padding: 3px;
     border-bottom: 1px solid #e3e3e3;
     border-top: 1px solid #e3e3e3;
 }
