--- a/view/index.html
+++ b/view/index.html
@@ -1,137 +1,112 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <title>docer</title>
-    <link rel="icon" href="/public/docer_logo.ico" type="image/x-icon"/>
-
-    <!-- <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet"> -->
-    <!-- <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap-grid.min.css" rel="stylesheet"> -->
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/public/docer.css" rel="stylesheet"/>
-
-    <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
-    <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-
-</head>
+<!-- head -->
+{{template "HeadTemp" .}}
+<!-- end -->
 
 <body class="body-dark">
 
 
-<div id="docer">
-    <div class="modal fade" id="filenameModal" tabindex="-1" role="dialog" aria-labelledby="filenameModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h3 class="modal-title" id="filenameModalLabel">新建</h3>
-                </div>
-                <form method="get" v-bind:action="'/edit/'+newFilename">
-                    <div class="modal-body">
-                        <input type="text" class="form-control" v-model="newFilename" required="required" autofocus>
-                        <input type="hidden" name="create" value="1">
+    <div id="docer">
+        <div class="modal fade" id="filenameModal" tabindex="-1" role="dialog" aria-labelledby="filenameModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h3 class="modal-title" id="filenameModalLabel">新建</h3>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                        <button type="submit" class="btn btn-primary">确定</button>
-                    </div>
-                </form>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div>
-    <!--modal end-->
-    <div class="modal fade" id="fileModal" tabindex="-1" role="dialog" aria-labelledby="fileModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h3 class="modal-title" id="fileModalLabel">上传本地文档</h3>
-                </div>
-                <form method="post" action="/upload" enctype="multipart/form-data">
-                    <div class="modal-body">
-                        <input type="file" name="file" required="required">
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                        <button type="submit" class="btn btn-primary">确定</button>
-                    </div>
-                </form>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div>
-    <!--modal end-->
-    <div class="navbar-fixed-top">
-        <div class="title text-center">
-            <div class="logo  pull-left">
-                <a href="/">Docer</a>
-            </div>
-            <div class="title-txt">
-                <label>欢迎来到Docer，Docer是一个帮助你快速撰写论文的工具。</label>
-                <label class="pull-right"><a v-on:click="logout()" >注销</a></label>
-            </div>
+                    <form method="get" v-bind:action="'/edit/'+newFilename">
+                        <div class="modal-body">
+                            <input type="text" class="form-control" v-model="newFilename" required="required" autofocus>
+                            <input type="hidden" name="create" value="1">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                            <button type="submit" class="btn btn-primary">确定</button>
+                        </div>
+                    </form>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
         </div>
-    </div>
-    <div class="container content">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>新建</h1>
-                <hr>
-            </div>
-
-            <div class="col-xs-3 col-md-2">
-                <div class="card">
-                    <a data-toggle="modal" data-target="#filenameModal">
-                        <img src="/public/file.png">
-                        <div>空白文档</div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-xs-3 col-md-2">
-                <div class="card">
-                    <a data-toggle="modal" data-target="#fileModal">
-                        <img src="/public/upload.png">
-                        <div>本地文档</div>
-                    </a>
-                </div>
-            </div>
+        <!--modal end-->
+        <div class="modal fade" id="fileModal" tabindex="-1" role="dialog" aria-labelledby="fileModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h3 class="modal-title" id="fileModalLabel">上传本地文档</h3>
+                    </div>
+                    <form method="post" action="/upload" enctype="multipart/form-data">
+                        <div class="modal-body">
+                            <input type="file" name="file" required="required">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                            <button type="submit" class="btn btn-primary">确定</button>
+                        </div>
+                    </form>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
         </div>
-        <br>
-        <div class="row">
-            <div class="col-md-12"><h1>打开</h1>
-                <hr>
-            </div>
-            <div class="col-xs-3 col-md-2" v-for="file in folder.files">
-                <div class="card">
+        <!--modal end-->
+        <div class="navbar-fixed-top">
+            {{template "TitleTemp" .}}
+        </div>
+        <div class="container content">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>新建</h1>
+                    <hr>
+                </div>
 
-                    <a v-bind:href="'/edit/'+file.name" data-toggle="tooltip"
-                       v-bind:title="file.name">
-                        <img src="/public/file.png">
-                        <div class="filename">${file.name}</div>
-                        <div>${file.modTime}</div>
-                        <div>${file.size}</div>
-                    </a>
-                    <div>
-                        <a v-on:click="delArticle(file.name)"><span
-                                    class="glyphicon glyphicon-trash"></span></a>
-                        |
-                        <a v-bind:href="'/download/'+file.name"><span
+                <div class="col-xs-3 col-md-2">
+                    <div class="card">
+                        <a data-toggle="modal" data-target="#filenameModal">
+                            <img src="/public/file.png">
+                            <div>空白文档</div>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-xs-3 col-md-2">
+                    <div class="card">
+                        <a data-toggle="modal" data-target="#fileModal">
+                            <img src="/public/upload.png">
+                            <div>本地文档</div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>打开</h1>
+                    <hr>
+                </div>
+                <div class="col-xs-3 col-md-2" v-for="file in folder.files">
+                    <div class="card">
+
+                        <a v-bind:href="'/edit/'+file.name" data-toggle="tooltip" v-bind:title="file.name">
+                            <img src="/public/file.png">
+                            <div class="filename">${file.name}</div>
+                            <div>${file.modTime}</div>
+                            <div>${file.size}</div>
+                        </a>
+                        <div>
+                            <a v-on:click="delArticle(file.name)"><span class="glyphicon glyphicon-trash"></span></a>
+                            |
+                            <a v-bind:href="'/download/'+file.name"><span
                                     class="glyphicon glyphicon-cloud-download"></span></a>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
 
     </div>
-
-</div>
 </body>
 
 <script>
@@ -166,14 +141,6 @@
                         vm.showArticles();
                     }).catch(function (error) {
                         alert("删除失败");
-                    });
-            },
-            logout: function () {
-                axios.post('/logout')
-                    .then(function (response) {
-                        window.location.href = "/";
-                    }).catch(function (error) {
-                        window.location.href = "/";
                     });
             }
         }
