--- a/view/login.html
+++ b/view/login.html
@@ -1,57 +1,36 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title>docer</title>
-    <link rel="icon" href="/public/docer_logo.ico" type="image/x-icon"/>
-
-    <!-- <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet"> -->
-    <!-- <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap-grid.min.css" rel="stylesheet"> -->
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/public/docer.css" rel="stylesheet"/>
-
-    <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
-    <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-
-</head>
+<!-- head -->
+{{template "HeadTemp" .}}
+<!-- end -->
 
 <body class="body-dark">
-<div class="navbar-fixed-top">
-    <div class="title text-center">
-        <div class="logo pull-left">
-            <a href="/">
-                Docer
-            </a>
-        </div>
-        <div class="title-txt">
-            <label>欢迎来到Docer，Docer是一个帮助你快速撰写论文的工具。</label>
+    <div class="navbar-fixed-top">
+        {{template "TitleTemp" .}}
+    </div>
+    <script>
+        $("#logout-link").hide();
+    </script>
+    <div class="container content">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 col-xs-12">
+                <h1>登录</h1>
+                <form class="form-group" role="form" method="post" action="/login">
+                    <div class="form-group">
+                        <label class="sr-only" for="name">用户名</label>
+                        <input type="text" class="form-control" name="username" placeholder="用户名">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="inputfile">密码</label>
+                        <input type="password" name="pwd" class="form-control" placeholder="密码">
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-sm btn-block">提交</button>
+                </form>
+                <p style="margin-top: 10px;">没有账号？ <a href="#">注册</a></p>
+            </div>
         </div>
     </div>
-</div>
-<div class="container content">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4 col-xs-12">
-            <h1>登录</h1>
-            <form class="form-group" role="form" method="post" action="/login">
-                <div class="form-group">
-                    <label class="sr-only" for="name">用户名</label>
-                    <input type="text" class="form-control" name="username" placeholder="用户名">
-                </div>
-                <div class="form-group">
-                    <label class="sr-only" for="inputfile">密码</label>
-                    <input type="password" name="pwd" class="form-control" placeholder="密码">
-                </div>
-                <button type="submit" class="btn btn-primary btn-sm btn-block">提交</button>
-            </form>
-            <p style="margin-top: 10px;" >没有账号？ <a href="#">注册</a></p>
-        </div>
-    </div>
-</div>
 
 </body>
 
