debug css bg-color

--- a/view/doc.html
+++ b/view/doc.html
@@ -97,7 +97,7 @@
             </div><!-- /.modal-dialog -->
         </div>
         <!--modal end-->
-        <div class="navbar-fixed-top">
+        <div class="navbar-fixed-top top-bar">
             {{template "TitleTemp" .}}
             {{template "ToolTemp" .}}
         </div>
