--- a/view/index.html
+++ b/view/index.html
@@ -51,7 +51,7 @@
             </div><!-- /.modal-dialog -->
         </div>
         <!--modal end-->
-        <div class="navbar-fixed-top">
+        <div class="navbar-fixed-top top-bar">
             {{template "TitleTemp" .}}
         </div>
         <div class="container content">
