--- a/view/login.html
+++ b/view/login.html
@@ -6,7 +6,7 @@
 <!-- end -->
 
 <body class="body-dark">
-    <div class="navbar-fixed-top">
+    <div class="navbar-fixed-top top-bar">
         {{template "TitleTemp" .}}
     </div>
     <script>
