--- a/view/doc.html
+++ b/view/doc.html
@@ -224,7 +224,7 @@
         </footer>
     </div>
 </body>
-<script src="/public/docer_doc.js"></script>
+<script src="/public/js/docer_doc.js"></script>
 <script>
     var create = {{.create }};
     var filename = {{.filename }};
