--- a/view/head.html
+++ b/view/head.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Docer {{.filename}}</title>
-    <link rel="icon" href="/public/docer_logo.ico" type="image/x-icon" />
+    <link rel="icon" href="/public/img/docer_logo.ico" type="image/x-icon" />
     <!-- css -->
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/public/docer.css" rel="stylesheet" />
+    <link href="/public/css/docer.css" rel="stylesheet" />
     <!-- vue -->
     <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -16,6 +16,6 @@
     <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- js -->
-    <script src="/public/common.js"></script>
+    <script src="/public/js/common.js"></script>
 </head>
 {{end}}
