--- a/view/login.html
+++ b/view/login.html
@@ -12,7 +12,7 @@
     <script>
         $("#logout-link").hide();
     </script>
-    <div class="container content">
+    <div class="container content-dark">
         <div class="row">
             <div class="col-md-4 col-md-offset-4 col-xs-12">
                 <h1>登录</h1>
