--- a/view/title.html
+++ b/view/title.html
@@ -7,8 +7,8 @@
     </div>
     <div class="title-txt">
         <span class="pull-left title-menu">
-            <label><a>帮助</a></label>
-            <label><a>关于</a></label>
+            <label><a href="/help">帮助</a></label>
+            <label><a href="/about">关于</a></label>
         </span>
         <label>{{.filename}}</label>
         <label class="pull-right" id="logout-link"><a onclick="logout()">注销</a></label>
