--- a/view/tool.html
+++ b/view/tool.html
@@ -1,6 +1,6 @@
 {{define "ToolTemp"}}
 <div class="row tool-bar">
-    <div class="col-md-9 col-xs-6">
+    <div class="col-md-12 col-xs-12">
         <a type="button" class="btn btn-default btn-sm" href="/">
             <span class="glyphicon glyphicon-home"></span>
         </a>
@@ -25,13 +25,13 @@
 
     </div>
 
-    <div class="col-md-3 col-xs-6">
-        <div class="input-group input-group-sm ">
-            <input type="text" class="form-control">
-            <span class="input-group-btn ">
-                    <button class="btn btn-primary" type="button">搜索</button>
-                </span>
-        </div>
-    </div>
+{{/*    <div class="col-md-3 col-xs-6">*/}}
+{{/*        <div class="input-group input-group-sm ">*/}}
+{{/*            <input type="text" class="form-control">*/}}
+{{/*            <span class="input-group-btn ">*/}}
+{{/*                    <button class="btn btn-primary" type="button">搜索</button>*/}}
+{{/*                </span>*/}}
+{{/*        </div>*/}}
+{{/*    </div>*/}}
 </div>
 {{end}}
