add register function & modify css

--- a/view/index.html
+++ b/view/index.html
@@ -95,7 +95,7 @@
 
                         </a>
                         <div>
-                            ${file.size}
+                            <span class="size">${file.size}</span>
                             <a v-on:click="delArticle(file.name)"><span class="glyphicon glyphicon-trash"></span></a>
                             |
                             <a v-bind:href="'/download/'+file.name"><span
