--- a/public/css/docer.css
+++ b/public/css/docer.css
@@ -124,11 +124,13 @@ a {
     /*border: 1px solid #333;*/
     padding: 10px;
     text-align: center;
-
+    background: #fff;
 }
 
 .card:hover {
     background: #e3e3e3;
+    /*box-shadow: 0px 1px 5px #aaa;*/
+    /*border: 1px solid royalblue;*/
     cursor: pointer !important;
 }
 
@@ -153,9 +155,10 @@ a {
 .filename {
     /*height: 20px;*/
     overflow: hidden; /*超出部分隐藏*/
-    /*white-space: nowrap;!*不换行*!*/
+    white-space: nowrap;/*不换行*/
     text-overflow: ellipsis; /*超出部分文字以...显示*/
     margin-top: 5px;
+    font-weight: bold;
 }
 
 .btn-select {
@@ -190,4 +193,8 @@ a {
 
 .top-bar{
     background: #fff !important;
+}
+
+.size{
+    color: green;
 }
