--- a/view/login.html
+++ b/view/login.html
@@ -6,32 +6,69 @@
 <!-- end -->
 
 <body class="body-dark">
-    <div class="navbar-fixed-top top-bar">
-        {{template "TitleTemp" .}}
-    </div>
-    <script>
-        $("#logout-link").hide();
-    </script>
-    <div class="container content-dark">
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4 col-xs-12">
-                <h1>登录</h1>
-                <form class="form-group" role="form" method="post" action="/login">
-                    <div class="form-group">
-                        <label class="sr-only" for="name">用户名</label>
-                        <input type="text" class="form-control" name="username" placeholder="用户名">
-                    </div>
-                    <div class="form-group">
-                        <label class="sr-only" for="inputfile">密码</label>
-                        <input type="password" name="pwd" class="form-control" placeholder="密码">
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-sm btn-block">提交</button>
-                </form>
-                <p style="margin-top: 10px;">没有账号？ <a href="#">注册</a></p>
-            </div>
+<div class="navbar-fixed-top top-bar">
+    {{template "TitleTemp" .}}
+</div>
+<script>
+    $("#logout-link").hide();
+</script>
+<div class="container content-dark">
+    <div class="row" id="loginForm">
+        <div class="col-md-4 col-md-offset-4 col-xs-12">
+            <h1>登录</h1>
+            <form class="form-group" role="form" method="post" action="/login">
+                <div class="form-group">
+                    <label class="sr-only" for="name">用户名</label>
+                    <input type="text" class="form-control" name="username" placeholder="用户名">
+                </div>
+                <div class="form-group">
+                    <label class="sr-only" for="inputfile">密码</label>
+                    <input type="password" name="pwd" class="form-control" placeholder="密码">
+                </div>
+                <button type="submit" class="btn btn-primary btn-sm btn-block">提交</button>
+            </form>
+            <p style="margin-top: 10px;">没有账号？ <a onclick="show(1)">注册</a></p>
         </div>
     </div>
 
+    <div class="row" id="registerForm" style="display: none;">
+        <div class="col-md-4 col-md-offset-4 col-xs-12">
+            <h1>注册</h1>
+            <form class="form-group" role="form" method="post" action="/register">
+                <div class="form-group">
+                    <label class="sr-only" for="name">用户名</label>
+                    <input type="text" class="form-control" name="username" placeholder="用户名">
+                </div>
+                <div class="form-group">
+                    <label class="sr-only" for="inputfile">密码</label>
+                    <input type="password" name="pwd" class="form-control" placeholder="确认密码">
+                </div>
+                <div class="form-group">
+                    <label class="sr-only" for="inputfile">确认密码</label>
+                    <input type="password" name="confirmPwd" class="form-control" placeholder="密码">
+                </div>
+                <div class="form-group">
+                    <label class="sr-only" for="inputfile">token</label>
+                    <input type="text" name="token" class="form-control" placeholder="密码">
+                </div>
+                <button type="submit" class="btn btn-primary btn-sm btn-block">提交</button>
+            </form>
+            <p style="margin-top: 10px;">已有账号？ <a onclick="show(0)">登录</a></p>
+        </div>
+    </div>
+</div>
+<script>
+    function show(t) {
+        time = 500;
+        if (t == 0) {
+            $("#loginForm").show(time);
+            $("#registerForm").hide(time);
+        } else {
+            $("#loginForm").hide(time);
+            $("#registerForm").show(time);
+        }
+    }
+</script>
 </body>
 
 
