--- a/view/head.html
+++ b/view/head.html
@@ -16,6 +16,6 @@
     <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- js -->
-    <script src="/public/js/common.js"></script>
+    <script src="/public/js/docer_common.js"></script>
 </head>
 {{end}}
