--- a/view/help.html
+++ b/view/help.html
@@ -5,7 +5,7 @@
 {{template "HeadTemp" .}}
 <!-- end -->
 
-<body class="body-dark">
+<body class="body">
     <div class="navbar-fixed-top top-bar">
         {{template "TitleTemp" .}}
     </div>
