update page theme

--- a/view/about.html
+++ b/view/about.html
@@ -5,7 +5,7 @@
 {{template "HeadTemp" .}}
 <!-- end -->
 
-<body class="body">
+<body class="body-dark">
 <div class="navbar-fixed-top top-bar">
     {{template "TitleTemp" .}}
 </div>
