--- a/view/head.html
+++ b/view/head.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Docer {{.filename}}</title>
+    <title>Docer</title>
     <link rel="icon" href="/public/img/docer_logo.ico" type="image/x-icon" />
     <!-- css -->
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
