--- a/view/doc.html
+++ b/view/doc.html
@@ -8,136 +8,136 @@
 <body data-spy="scroll">
 
 
-<div id="docer">
-    <!--modal start-->
-    <!-- 1 -->
-    <div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="saveModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h3 class="modal-title" id="saveModalLabel">另存为</h3>
-                </div>
-                <div class="modal-body">
-                    <input type="text" class="form-control" v-model="article.file">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                    <button type="button" class="btn btn-primary" v-on:click="postArticle()" data-dismiss="modal">保存
-                    </button>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div>
-    <!-- 2 -->
-    <div class="modal fade" id="folderModal" tabindex="-1" role="dialog" aria-labelledby="folderModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h3 class="modal-title" id="folderModalLabel">打开</h3>
-                </div>
-                <div class="modal-body">
-                    <ul>
-                        <li v-for="file in folder.files">
-                            <a v-on:click="openArticles(file.name)" data-dismiss="modal">${file.name}</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div>
-    <!-- 3 -->
-    <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h3 class="modal-title" id="confirmModalLabel">新建文件</h3>
-                </div>
-                <div class="modal-body">
-                    是否保存${article.file}?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal"
-                            v-on:click="$('#filenameModal').modal('show');">不保存
-                    </button>
-                    <button type="button" class="btn btn-primary" v-on:click="postArticle()" data-dismiss="modal">保存
-                    </button>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div>
-    <!-- 4 -->
-    <div class="modal fade" id="filenameModal" tabindex="-1" role="dialog" aria-labelledby="filenameModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h3 class="modal-title" id="filenameModalLabel">新建</h3>
-                </div>
-                <div class="modal-body">
-                    <input type="text" class="form-control" v-model="newFilename">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"
-                            v-on:click="newArticle(newFilename)">确定
-                    </button>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div>
-    <!--modal end-->
-    <div class="navbar-fixed-top top-bar">
-        {{template "TitleTemp" .}}
-        {{template "ToolTemp" .}}
-        <div class="alert" id="alert" style="display: none;margin: 0px;">
-            <a href="#" class="close" data-dismiss="alert">
-                &times;
-            </a>
-            <strong>${alert}</strong>
+    <div id="docer">
+        <!--modal start-->
+        <!-- 1 -->
+        <div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="saveModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h4 class="modal-title" id="saveModalLabel">另存为</h4>
+                    </div>
+                    <div class="modal-body">
+                        <input type="text" class="form-control" v-model="article.file">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                        <button type="button" class="btn btn-primary" v-on:click="postArticle()" data-dismiss="modal">保存
+                        </button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
         </div>
-    </div>
-    <div class="container-fluid content">
-        <div class="row border-bottom">
-            <div class="col-md-12">
-                <h3>标题</h3>
-                <input v-model="article.title" type="text" id="title" @keyup.down="downTitle()"
-                       class="form-control p-3">
+        <!-- 2 -->
+        <div class="modal fade" id="folderModal" tabindex="-1" role="dialog" aria-labelledby="folderModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h4 class="modal-title" id="folderModalLabel">打开</h4>
+                    </div>
+                    <div class="modal-body">
+                        <ul>
+                            <li v-for="file in folder.files">
+                                <a v-on:click="openArticles(file.name)" data-dismiss="modal">${file.name}</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div>
+        <!-- 3 -->
+        <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h4 class="modal-title" id="confirmModalLabel">新建文件</h4>
+                    </div>
+                    <div class="modal-body">
+                        是否保存${article.file}?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"
+                            v-on:click="$('#filenameModal').modal('show');">不保存
+                        </button>
+                        <button type="button" class="btn btn-primary" v-on:click="postArticle()" data-dismiss="modal">保存
+                        </button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div>
+        <!-- 4 -->
+        <div class="modal fade" id="filenameModal" tabindex="-1" role="dialog" aria-labelledby="filenameModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h4 class="modal-title" id="filenameModalLabel">新建</h4>
+                    </div>
+                    <div class="modal-body">
+                        <input type="text" class="form-control" v-model="newFilename">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal"
+                            v-on:click="newArticle(newFilename)">确定
+                        </button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div>
+        <!--modal end-->
+        <div class="navbar-fixed-top top-bar">
+            {{template "TitleTemp" .}}
+            {{template "ToolTemp" .}}
+            <div class="alert" id="alert" style="display: none;margin: 0px;">
+                <a href="#" class="close" data-dismiss="alert">
+                    &times;
+                </a>
+                <strong>${alert}</strong>
             </div>
-            <!--<div class="col-md-12">
+        </div>
+        <div class="container-fluid content">
+            <div class="row border-bottom" style="padding-bottom: 7px;">
+                <div class="col-md-12">
+                    <!-- <h4>标题</h4> -->
+                    <input v-model="article.title" type="text" id="title" @keyup.down="downTitle()"
+                        class="form-control" placeholder="标题">
+                </div>
+                <!--<div class="col-md-12">
         <div class="input-group input-group-sm p-3">
             <span class="input-group-addon">输入：</span>
             <input v-model="content" type="text" id="title" @keyup.down="downTitle()" class="form-control">
         </div>
 
     </div>-->
-        </div>
-        <div class="row border-bottom">
+            </div>
+            <!-- <div class="row border-bottom">
             <div class="col-xs-4 col-md-3">
-                <h3>章节</h3>
+                <h4>章节</h4>
             </div>
             <div class="col-xs-4 col-md-6">
-                <h3>正文</h3>
+                <h4>正文</h4>
             </div>
             <div class="col-xs-4 col-md-3">
-                <h3>引用</h3>
+                <h4>引用</h4>
             </div>
-        </div>
-        <div class="row ">
-            <div class="col-xs-8 col-md-9">
-                <div class="row chapter" v-for="(chapter,i) in article.chapters">
-                    <div class="col-xs-12 col-md-4">
-                        <div class="input-group input-group-sm p-2">
+        </div> -->
+            <div class="row ">
+                <div class="col-xs-12 col-md-12">
+                    <div class="row chapter" v-for="(chapter,i) in article.chapters">
+                        <div class="col-xs-12 col-md-12">
+                            <div class="input-group input-group-sm p-2">
                                 <span class="input-group-addon ">
                                     <select v-model="chapter.level">
                                         <option v-bind:value="1">1</option>
@@ -149,10 +149,10 @@
                                     级
                                 </span>
 
-                            <input v-model="chapter.title" type="text" v-bind:id="'c-'+i"
-                                   @keyup.enter="addChapter(i,1)" @keyup.up="upChapter(i)" @keyup.down="downChapter(i)"
-                                   @keyup.right="rightChapter(i)" class="form-control">
-                            <span class="input-group-btn">
+                                <input v-model="chapter.title" placeholder="章节" type="text" v-bind:id="'c-'+i"
+                                    @keyup.enter="addChapter(i,1)" @keyup.up="upChapter(i)" @keyup.down="downChapter(i)"
+                                    @keyup.right="rightChapter(i)" class="form-control">
+                                <span class="input-group-btn">
                                     <button v-on:click="addChapter(i,0)" class="btn btn-default">
                                         <span class="glyphicon glyphicon-chevron-up"></span>
                                     </button>
@@ -163,23 +163,23 @@
                                         <span class="glyphicon glyphicon-remove"></span>
                                     </button>
                                 </span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-xs-12 col-md-8">
-                        <div v-for="(line,j) in chapter.lines" class="input-group input-group-sm p-2">
-                            {{/*                    <span class="input-group-addon">${j+1}</span>*/}}
-                            <input v-model="line.content" type="text" @keyup.enter="addContent(i,j,1)"
-                                   class="form-control" @keyup.up="upContent(i,j)" @keyup.down="downContent(i,j)"
-                                   @keyup.46="delContent(i,j)" @keyup.right="focusReference(0)"
-                                   @keyup.left="focusChapter(i)" v-bind:id="'c-'+i+'-c-'+j">
-                            <!-- @keyup.46="delContent(i,j)" -->
-                            <span class="input-group-btn">
+                        <div class="col-xs-12 col-md-12">
+                            <div v-for="(line,j) in chapter.lines" class="input-group input-group-sm p-2">
+                                {{/*                    <span class="input-group-addon">${j+1}</span>*/}}
+                                <input v-model="line.content" placeholder="一行正文" type="text" @keyup.enter="addContent(i,j,1)"
+                                    class="form-control" @keyup.up="upContent(i,j)" @keyup.down="downContent(i,j)"
+                                    @keyup.46="delContent(i,j)" @keyup.right="focusReference(0)"
+                                    @keyup.left="focusChapter(i)" v-bind:id="'c-'+i+'-c-'+j">
+                                <!-- @keyup.46="delContent(i,j)" -->
+                                <span class="input-group-btn">
                                     <span class="btn btn-default btn-select">
                                         <select v-model="line.reference">
                                             <option v-bind:value="-1">无</option>
                                             <option v-bind:value="reference.id"
-                                                    v-for="(reference,n) in article.references" data-toggle="tooltip"
-                                                    v-bind:title="reference.text">[${n+1}]</option>
+                                                v-for="(reference,n) in article.references" data-toggle="tooltip"
+                                                v-bind:title="reference.text">[${n+1}]</option>
                                         </select>
                                     </span>
                                     <button v-on:click="addContent(i,j,0)" class="btn btn-default">
@@ -192,11 +192,32 @@
                                         <span class="glyphicon glyphicon-remove"></span>
                                     </button>
                                 </span>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="row chapter">
+                        <div class="col-lg-12">
+                            <div>
+                                <div class="input-group input-group-sm p-2" v-for="(r,k) in article.references">
+                                    <span class="input-group-addon">[${k+1}]</span>
+                                    <input v-model="r.text" placeholder="引用" v-bind:id="'r-'+k" type="text" class="form-control"
+                                        @keyup.enter="addReference(k)" @keyup.down="focusReference(k+1)"
+                                        @keyup.up="focusReference(k-1)" @keyup.left="focusContent(0,0)">
+                                    <span class="input-group-btn">
+                                        <button v-on:click="addReference(k)" class="btn btn-default">
+                                            <span class="glyphicon glyphicon-plus"></span>
+                                        </button>
+                                        <button v-on:click="delReference(k)" class="btn btn-default">
+                                            <span class="glyphicon glyphicon-remove"></span>
+                                        </button>
+                                    </span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-xs-4 col-md-3">
+                <!-- <div class="col-xs-12 col-md-3">
                 <div class="row">
                     <div class="col-lg-12">
                         <div data-spy="affix" data-offset-top="200" class="references">
@@ -217,17 +238,17 @@
                         </div>
                     </div>
                 </div>
+            </div> -->
+
             </div>
-
         </div>
+
+        <footer class="navbar-fixed-bottom text-right">
+
+            行数:<span>${article.lines}</span> 字数:<span>${article.words}</span>
+
+        </footer>
     </div>
-
-    <footer class="navbar-fixed-bottom text-right">
-
-        行数:<span>${article.lines}</span> 字数:<span>${article.words}</span>
-
-    </footer>
-</div>
 </body>
 <script src="/public/js/docer_doc.js"></script>
 <script>
