--- a/view/preview.html
+++ b/view/preview.html
@@ -25,11 +25,13 @@
                     <h4 v-if="chapter.level == 3">${index+1}.${level[index][0]}.${++level[index][1]}.${chapter.title}</h4>
                     <h5 v-if="chapter.level == 4">${index+1}.${level[index][0]}.${level[index][1]}.${++level[index][2]}.${chapter.title}</h5>
                     <h6 v-if="chapter.level == 5">${index+1}.${level[index][0]}.${level[index][1]}.${level[index][2]}.${++level[index][3]}.${chapter.title}</h6>
-                    <p v-for="line in chapter.lines">${line.content}
-                        <label v-if="reference.id == line.reference" v-for="(reference,i) in article.references">[${i+1}]</label></p>
+                    <!-- <p v-for="line in chapter.lines"> -->
+                        <p>
+                        <span v-for="line in chapter.lines">${line.content}
+                        <label v-if="reference.id == line.reference" v-for="(reference,i) in article.references">[${i+1}]</label></span></p>
                 </div>
                 <h2>参考文献</h2>
-                <p v-for="(reference,i) in article.references">[${i+1}] ${reference.text}</p>
+                <p v-for="(reference,i) in article.references" v-if="reference.text">[${i+1}] ${reference.text}</p>
             </div>
 
 
